fixes issue with long tooltips overflowing

--- a/styles/_tooltip.sass
+++ b/styles/_tooltip.sass
@@ -3,7 +3,6 @@
     color: $primary-color
     background-color: $background-color
     margin: 0
-    white-space: nowrap
     box-shadow: none
     border: 1px solid $primary-color
     border-radius: 0
